tests/negative/neg_delay_until.safe
-- Test: neg_delay_until
-- Description: Absolute delay-until remains outside PR08.1.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.4.p38:35ed84d9
-- Expected: REJECT unsupported_source_construct

package delay_until_test

   task worker

      loop
         delay until 1.0;




